--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="nav_planning">Planning</string>
     <string name="nav_week">Semaine</string>
+    <string name="nav_web">Accès au site</string>
     <string name="nav_parameter">Paramètres</string>
 
     <string name="action_refresh">Actualiser</string>
@@ -17,4 +18,5 @@
     <string name="notes_event">note(s) : %s</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+    <string name="close">Fermer</string>
 </resources>
