--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,10 @@
     <string name="settings_group_legendary">Vous pouvez sélectionner ou déselectionner les groupes que vous souhaitez voir affichés.\nVous pouvez également renommer les groupes.</string>
     <string name="settings_alarm_choose_time">Temps entre votre réveil et l\'arrivée à votre fac</string>
     <string name="active_all_groups">Activer tout les groupes</string>
-    <string name="desactive_all_groups">Désactiver tout les groupes</string>
+    <string name="disable_all_groups">Désactiver tout les groupes</string>
+    <string name="settings_reset_groups">Réinitilisation des groupes</string>
+    <string name="dialog_reset_group_title">Réinitialisation des groupes</string>
+    <string name="dialog_reset_group_message">En réinitialisant tout les groupes, le renommage et la visibilité des groupes seront remis à zéro.\nSouhaitez-vous toujours réinitialiser les groupes ?</string>
+    <string name="reset">Réinitialiser</string>
+    <string name="cancel">Annuler</string>
 </resources>
