--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="dialog_reset_group_message">En réinitialisant tout les groupes, le renommage et la visibilité des groupes seront remis à zéro.\nSouhaitez-vous toujours réinitialiser les groupes ?</string>
     <string name="reset">Réinitialiser</string>
     <string name="cancel">Annuler</string>
+    <string name="next_alarm_set">Votre prochain réveil est programmé pour le %s à %s</string>
 </resources>
