--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,9 +23,8 @@
     <string name="rename_group_hint">Renommer le groupe</string>
     <string name="settings_title">Mes préférences</string>
     <string name="settings_group">Paramètrage des groupes</string>
-    <string name="settings_alarm_clock">Réveil matin</string>
-    <string name="settings_alarm_clock_legendary">Activer ou désactiver le réveil.</string>
     <string name="settings_group_legendary">Vous pouvez sélectionner ou déselectionner les groupes que vous souhaitez voir affichés.\nVous pouvez également renommer les groupes.</string>
+    <string name="settings_primary_group">Paramètrage des groupes primaires</string>
     <string name="settings_alarm_choose_time">Temps entre votre réveil et l\'arrivée à votre fac</string>
     <string name="active_all_groups">Activer tout les groupes</string>
     <string name="disable_all_groups">Désactiver tout les groupes</string>
@@ -34,7 +33,6 @@
     <string name="dialog_reset_group_message">En réinitialisant tout les groupes, le renommage et la visibilité des groupes seront remis à zéro.\nSouhaitez-vous toujours réinitialiser les groupes ?</string>
     <string name="reset">Réinitialiser</string>
     <string name="cancel">Annuler</string>
-    <string name="next_alarm_set">Votre prochain réveil est programmé pour le %s</string>
     <string name="time_format">%02d:%02d</string>
 
     <string name="adding_task_title">Nouvel évênement</string>
