--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,11 @@
     <string name="settings_group">Paramètrage des groupes</string>
     <string name="settings_group_legendary">Vous pouvez sélectionner ou déselectionner les groupes que vous souhaitez voir affichés.\nVous pouvez également renommer les groupes.</string>
     <string name="settings_primary_group">Paramètrage des groupes primaires</string>
+    <string name="settings_select_master">Sélectionnez votre master</string>
+    <string name="settings_select_master1">master 1</string>
+    <string name="settings_select_master2">master 2</string>
+    <string name="settings_select_master1_message">"master 1 sélectionné, veuillez recharger le calendrier pour la bonne prise en compte.</string>
+    <string name="settings_select_master2_message">"master 2 sélectionné, veuillez recharger le calendrier pour la bonne prise en compte.</string>
     <string name="settings_alarm_choose_time">Temps entre votre réveil et l\'arrivée à votre fac</string>
     <string name="active_all_groups">Activer tout les groupes</string>
     <string name="disable_all_groups">Désactiver tout les groupes</string>
